--- a/api/views/menu.ejs
+++ b/api/views/menu.ejs
@@ -26,11 +26,12 @@
                 <li> <a href="#">Hyndai</a> </li>
             </ul>
 
-        </nav>
+          </nav>
+          
+        </header>
         
-    </header>
-
-    <div id="corpo">
+      <div id="corpo">
+      <img src="../views/vw/fiat.jpg">
       <%= conteudo %>
     </div>
 
