--- a/api/views/vw/frm_VWMenu.ejs
+++ b/api/views/vw/frm_VWMenu.ejs
@@ -12,7 +12,7 @@
 
     <title> <%= title %> </title>
   </head>
-  <body>
+  <img>
     
     <header>
         
@@ -30,12 +30,14 @@
         </nav>
         
     </header>
-
+    <img src="../../../public/estilo/fiat.jpg">
     <div id="corpo">
+   
+          <h2><%= titulo %></h2>
+          <%= conteudo %>
       
-      <%= conteudo %>
     </div>
-
+    
     <footer>
       <%= autor %>
     </footer>
