--- a/api/views/vw/frm_Mecanica.ejs
+++ b/api/views/vw/frm_Mecanica.ejs
@@ -1,51 +1,109 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
-    <!-- Meta tags Obrigatórias -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="/estilo/noticiasEstilo.css">
+    <title> Montadora </title>
 
-    <title> <%= title %> </title>
+   
+    <!-- Principal CSS do Bootstrap -->
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Estilos customizados para esse template -->
+    <link href="jumbotron.css" rel="stylesheet">
   </head>
+
   <body>
-    
-    <header>
+
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="/"><img src="/imagens/incon1.jpeg" alt="Montadora"  title="Montadora"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"> <span class="sr-only">(atual)</span></a>
+          </li>
+
+          <li class="nav-item">
+             <a class="nav-link" href="/">inicio</a>
+          </li>
+
+          <li class="nav-item">
+              <a class="nav-link" href="/VW/VWBrasilia">Voltar</a>
+          </li>
+
+          <li class="nav-item"> 
+            <a class="nav-link" href="#">Motor</a>
+          </li>
+                
+          <li class="nav-item"> 
+            <a class="nav-link" href="#">Pedais</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="#">Câmbio</a>
+        </li>
+
+        <li class="nav-item"> 
+          <a class="nav-link" href="">Volante</a>
+        </li>
+              
+        <li class="nav-item"> 
+          <a class="nav-link" href="">Sensores</a>
+        </li>
+              
         
-        <h1 class = 'titulo'>SAÚDE</h1>
-        <nav class="menuPrincipal">
-            <ul>
-                <li><a href="/">Inicio</a></li>
-                <li> <a href="/VW/VWBrasilia">Voltar</a> </li>
-                <li><a href="#">Motor</a></li>
-                <li><a href="#">Pedais</a></li>
-                <li><a href="#">Câmbio</a></li>
-                <li><a href="#">Volante</a></li>
-                <li><a href="#">Sensores</a></li>
-            </ul>
+        </ul>
+      </div>
+    </nav>
 
-        </nav>
-        
-    </header>
+    <main role="main">
 
-    <div id="corpo">
-        <h2><%= titulo %></h2>
-        <%= conteudo %>
-    </div>
+      <!-- Principal jumbotron, para a principal mensagem de marketing ou call to action -->
+      <div class="jumbotron">
+        <div class="container">
+          <br>
+          <br>
+          <img src="/imagens/mecanica.jpeg" class="img-fluid" alt="Imagem responsiva" width="450" height="250">
+          <br>
+          <br>
+          <h1><strong>Mecânica</strong> </h1>
+          <h2><strong></strong> </h2>
+          
+          <br>
+          <p>O carro é uma necessidade para a maior parte dos brasileiros, pois facilita bastante o atendimento a compromissos de rotina, principalmente quando trajetos maiores devem ser percorridos.</p>
+          
+          <p><a class="btn btn-primary btn-lg" href="https://blog.fras-le.com/saiba-o-basico-de-mecanica-automotiva/" role="button">Básico sobre Mecânica &raquo;</a></p>
+        </div>
+      </div>
 
-    <footer>
-      <%= autor %>
+      <div class="container">
+        <img src="/imagens/rodape.jpeg" class="img-fluid" alt="Imagem responsiva">
+      </div>
+          
+    </main>
+
+    <br>
+
+    <footer class="container">
+      <p>&copy;Direitos reservados ás Montadoras Brasil  </p>
     </footer>
 
-    
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+    <!-- Principal JavaScript do Bootstrap
+    ================================================== -->
+    <!-- Foi colocado no final para a página carregar mais rápido -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
   </body>
 </html>
