--- a/api/views/menu.ejs
+++ b/api/views/menu.ejs
@@ -13,7 +13,7 @@
 
    
     <!-- Principal CSS do Bootstrap -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="estilos/carrosel.css" rel="stylesheet">
 
     <!-- Estilos customizados para esse template -->
     <link href="jumbotron.css" rel="stylesheet">
