--- a/api/views/vw/frm_Mecanica.ejs
+++ b/api/views/vw/frm_Mecanica.ejs
@@ -73,7 +73,7 @@
         <div class="container">
           <br>
           <br>
-          <img src="/imagens/mecanica.jpeg" class="img-fluid" alt="Imagem responsiva" width="450" height="250">
+          <img src="/imagens/mecanica.jpeg" class="col mx-auto text-center" alt="Imagem responsiva" width="650" height="350" >
           <br>
           <br>
           <h1><strong>Mecânica</strong> </h1>
