--- a/api/views/vw/frm_VWMenu.ejs
+++ b/api/views/vw/frm_VWMenu.ejs
@@ -71,7 +71,7 @@
         <div class="container">
           <br>
           <br>
-          <img src="/imagens/vm1.jpg" class="img-fluid" alt="Imagem responsiva" >
+          <img src="/imagens/vm1.jpg" class="col mx-auto text-center" alt="Imagem responsiva"  width="650" height="350" >
           <br>
           <br>
           <h1><strong>VW</strong> </h1>
